2011-09-12  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed start stop script containing wrong paths to tomcat

2011-08-26  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed default Solr path for use with the provided install script, the core was missing after having introduced a multicore setup by default

2011-08-24  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Removed sortSubTitle_stringS from tt_news fields
	* !!! Fixed issue #28872: Remove static sort fields in schema.xml

2011-08-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added wildcard query support

2011-08-16  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue in the Index Queue indexer which could lead to invalid access field values when indexing record. The access filter plugin would then fail to parse those.
	* Changed the install script to be less verbose and highlight some output to make it easier to follow

2011-08-05  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the request handlers to use edismax
	* Changed the schema.xml files to use relative paths in xIncludes (supported since Apache Solr 3.1)
	* Fixed solrconfig.xml, using response writers from org.apache.solr.response instead of org.apache.solr.request
	* Added explicit luceneMatchVersion specification to solrconfig.xml
	* Changed solrconfig.xml highlighting configuration to match Solr 3.x

2011-08-03  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Removed the singlecore configuration for Solr
	* !!! Moved Solr multicore configuration up one level, making it the default

	* Changed the install script to set up Apache Solr 3.3 with a multicore setup by default

	* Changed solr.xml to only one core (english)
	* Added ElisionFilterFactory infrench schema.xml
	* Fixed encoding of french stopwords.txt
	* Added StempelPolishStemFilterFactory stemmer in polish schema.xml
	* Fixed typo in polish schema.xml
	* Fixed encoding of spanish stopwords.txt