@@ -1,3 +1,7 @@
+2011-09-14  Ingo Renner  <ingo.renner@dkd.de>
+
+	* !! Changed Solr install script to install Apache Solr 3.4
+
 2011-09-12  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed start stop script containing wrong paths to tomcat
